--- a/projects/ngx-route-manager-demo/src/app/components/second/second.component.html
+++ b/projects/ngx-route-manager-demo/src/app/components/second/second.component.html
@@ -4,7 +4,7 @@
 
 <section class="w-full md:w-[900px] m-auto flex justify-between">
 
-  <a [routerLink]="['/' + ngxRouteService.routes.first.fn({})]" class="px-2 py-1 rounded-xl shadow-md text-center bg-red-700 text-white inline-block">
+  <a [routerLink]="['/' + ngxRouteService.routes.first.fn()]" class="px-2 py-1 rounded-xl shadow-md text-center bg-red-700 text-white inline-block">
     Prev
   </a>
 
