--- a/projects/ngx-route-manager-demo/src/app/components/fifth/fifth.component.html
+++ b/projects/ngx-route-manager-demo/src/app/components/fifth/fifth.component.html
@@ -13,7 +13,7 @@
     <span> [ userRole: {{ ngxRouteService.routes.fifth.params.userRole.snapshotValue() }}, state: {{ ngxRouteService.routes.fifth.params.state.snapshotValue() }} ] </span>
   </div>
 
-  <a [routerLink]="['/' + ngxRouteService.routes.first.fn({})]" class="px-2 py-1 rounded-xl shadow-md text-center bg-red-700 text-white inline-block">
+  <a [routerLink]="['/' + ngxRouteService.routes.sixth.fn({ date: '2001-sept-20', options: 'option 194' })]" class="px-2 py-1 rounded-xl shadow-md text-center bg-red-700 text-white inline-block">
     Next
   </a>
 
